text overflowing fixed

--- a/styles/Entry.module.css
+++ b/styles/Entry.module.css
@@ -5,6 +5,7 @@
 	/* justify-content: space-between; */
 	border-top: 1px solid rgba(255, 255, 255, 0.121);
 	border-radius: 0.5em;
+	/* max-width: inherit; */
 }
 .entryViewer:hover {
 	background-color: rgba(255, 255, 255, 0.052);
@@ -22,6 +23,7 @@
 
 .entryDescription {
 	padding: 0.5em;
+	word-break: break-all;
 }
 
 .entryDate {
